add feature search for admin